--- a/2022_react-blog/react_blog/src/index.css
+++ b/2022_react-blog/react_blog/src/index.css
@@ -7,6 +7,18 @@
 *:not(svg, path) {
   color: white;
 }
+*::-webkit-scrollbar {
+  height: 4px;
+}
+*::-webkit-scrollbar-thumb {
+  height: 10%;
+  background-color: #464646;
+
+  border-radius: 10px;
+}
+*::-webkit-scrollbar-track {
+  background-color: #1e1e1e;
+}
 
 body {
   margin: 0;
